<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Onboarding">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60sp"
        app:srcCompat="@drawable/onb_logo" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="411sp"
        android:fontFamily="@font/alegreya_regular"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="232sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alegreyasans_regular"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="20sp" />

    <Button
        android:id="@+id/onb_login_btn"
        style="@style/buttons"
        android:layout_below="@id/intro"
        android:layout_marginTop="50sp"
        android:text="@string/onb_login_btn"
        app:cornerRadius="10sp" />

    <TextView
        android:id="@+id/onb_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/onb_login_btn"
        android:layout_marginTop="18sp"
        android:fontFamily="@font/alegreyasans_regular"
        android:onClick="onClick"
        android:text="@string/onb_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="20sp" />
</RelativeLayout>